--- a/.themes/classic/sass/base/_utilities.scss
+++ b/.themes/classic/sass/base/_utilities.scss
@@ -5,6 +5,13 @@
   height: image-height($img);
 }
 
+@mixin shadow-box($border: #fff .5em solid, $shadow: rgba(#000, .15) 0 1px 4px, $border-radius: .3em) {
+  @include border-radius($border-radius);
+  @include box-shadow($shadow);
+  @include box-sizing(border-box);
+  border: $border;
+}
+
 @mixin selection($bg, $color: inherit, $text-shadow: none){
   * {
     &::-moz-selection { background: $bg; color: $color; text-shadow: $text-shadow; }
